--- a/templates/search.html
+++ b/templates/search.html
@@ -6,7 +6,9 @@
 </head>
 <body>
     <div class="header">
-        <img src="{{ url_for('static', filename='images/logo_small.jpg') }}" alt="LLMVista Logo">
+        <a href="{{ url_for('home') }}">
+            <img src="{{ url_for('static', filename='images/logo_small.jpg') }}" alt="LLMVista Logo">
+        </a>
     </div>
     <div class="container">
         <b>WEB PAGES</b>
